main/bkool/parser/.antlr/BKOOLParser.py
# Generated from d:\PPL\initial2\initial\src\main\bkool\parser\BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'void'", "'boolean'", 
                     "'string'", "'class'", "'extends'", "'static'", "'final'", 
                     "'break'", "'continue'", "'do'", "'else'", "'if'", 
                     "'then'", "'for'", "'return'", "'true'", "'false'", 
                     "'nil'", "'this'", "'to'", "'downto'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "':'", "'.'", "','", "';'", 
                     "'='", "':='", "'+'", "'*'", "'\\'", "'!='", "'<'", 
                     "'<='", "'||'", "'!'", "'new'", "'-'", "'/'", "'%'", 
                     "'=='", "'>'", "'>='", "'&&'", "'^'" ]

    symbolicNames = [ "<INVALID>", "INTTYPE", "FLOATTYPE", "VOID_TYPE", 
                      "BOOLTYPE", "STRINGTYPE", "CLASS", "EXTENDS", "STATIC", 
                      "FINAL", "BREAK", "CONTINUE", "DO", "ELSE", "IF", 
                      "THEN", "FOR", "RETURN", "TRUE", "FALSE", "NIL", "THIS", 
                      "TO", "DOWN_TO", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "LB", "RB", "LC", "RC", "LS", "RS", "COLON", 
                      "DOT", "COMMA", "SM", "EQUAL", "ASSIGN", "PLUS", "MUL", 
                      "DIV", "NOT_EQUAL", "LT", "LE", "OR", "NOT", "NEW", 
                      "SUB", "FLOAT_DIV", "MOD", "IS_EQUAL", "GT", "GE", 
                      "AND", "CONCATE", "ID", "COMMENT_1", "COMMENT_2", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_parentID = 2
    RULE_classBody = 3
    RULE_classBodyList = 4
    RULE_classMem = 5
    RULE_attributeDecl = 6
    RULE_varDecl_init = 7
    RULE_varDecl_list = 8
    RULE_methodDecl = 9
    RULE_param = 10
    RULE_methodParameter = 11
    RULE_parameterList = 12
    RULE_varDecl = 13
    RULE_exp = 14
    RULE_exp1 = 15
    RULE_exp2 = 16
    RULE_exp3 = 17
    RULE_exp4 = 18
    RULE_exp5 = 19
    RULE_exp6 = 20
    RULE_exp7 = 21
    RULE_exp8 = 22
    RULE_exp9 = 23
    RULE_exp10 = 24
    RULE_exp11 = 25
    RULE_operand = 26
    RULE_mtype = 27
    RULE_stmt = 28
    RULE_stmtList = 29
    RULE_block_stmt = 30
    RULE_varDeclList = 31
    RULE_assign_stmt = 32
    RULE_lhs = 33
    RULE_if_stmt = 34
    RULE_for_stmt = 35
    RULE_for_condition = 36
    RULE_break_stmt = 37
    RULE_continue_stmt = 38
    RULE_return_stmt = 39
    RULE_call_stmt = 40
    RULE_expList = 41
    RULE_arraylit = 42
    RULE_literalList = 43
    RULE_literal = 44
    RULE_boollit = 45

    ruleNames =  [ "program", "classDecl", "parentID", "classBody", "classBodyList", 
                   "classMem", "attributeDecl", "varDecl_init", "varDecl_list", 
                   "methodDecl", "param", "methodParameter", "parameterList", 
                   "varDecl", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "exp11", "operand", 
                   "mtype", "stmt", "stmtList", "block_stmt", "varDeclList", 
                   "assign_stmt", "lhs", "if_stmt", "for_stmt", "for_condition", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "expList", "arraylit", "literalList", "literal", "boollit" ]

    EOF = Token.EOF
    INTTYPE=1
    FLOATTYPE=2
    VOID_TYPE=3
    BOOLTYPE=4
    STRINGTYPE=5
    CLASS=6
    EXTENDS=7
    STATIC=8
    FINAL=9
    BREAK=10
    CONTINUE=11
    DO=12
    ELSE=13
    IF=14
    THEN=15
    FOR=16
    RETURN=17
    TRUE=18
    FALSE=19
    NIL=20
    THIS=21
    TO=22
    DOWN_TO=23
    INTLIT=24
    FLOATLIT=25
    BOOLLIT=26
    STRINGLIT=27
    LB=28
    RB=29
    LC=30
    RC=31
    LS=32
    RS=33
    COLON=34
    DOT=35
    COMMA=36
    SM=37
    EQUAL=38
    ASSIGN=39
    PLUS=40
    MUL=41
    DIV=42
    NOT_EQUAL=43
    LT=44
    LE=45
    OR=46
    NOT=47
    NEW=48
    SUB=49
    FLOAT_DIV=50
    MOD=51
    IS_EQUAL=52
    GT=53
    GE=54
    AND=55
    CONCATE=56
    ID=57
    COMMENT_1=58
    COMMENT_2=59
    WS=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.classDecl()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 97
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyContext,0)


        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def parentID(self):
            return self.getTypedRuleContext(BKOOLParser.ParentIDContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(BKOOLParser.CLASS)
            self.state = 100
            self.match(BKOOLParser.ID)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 101
                self.match(BKOOLParser.EXTENDS)
                self.state = 102
                self.parentID()


            self.state = 105
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_parentID




    def parentID(self):

        localctx = BKOOLParser.ParentIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parentID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(BKOOLParser.LC, 0)

        def RC(self):
            return self.getToken(BKOOLParser.RC, 0)

        def classBodyList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classBody




    def classBody(self):

        localctx = BKOOLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(BKOOLParser.LC)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.VOID_TYPE) | (1 << BKOOLParser.BOOLTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.ID))) != 0):
                self.state = 110
                self.classBodyList()


            self.state = 113
            self.match(BKOOLParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classMem(self):
            return self.getTypedRuleContext(BKOOLParser.ClassMemContext,0)


        def classBodyList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classBodyList




    def classBodyList(self):

        localctx = BKOOLParser.ClassBodyListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classBodyList)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.classMem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.classMem()
                self.state = 117
                self.classBodyList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classMem




    def classMem(self):

        localctx = BKOOLParser.ClassMemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classMem)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.attributeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.methodDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mtype(self):
            return self.getTypedRuleContext(BKOOLParser.MtypeContext,0)


        def varDecl_list(self):
            return self.getTypedRuleContext(BKOOLParser.VarDecl_listContext,0)


        def SM(self):
            return self.getToken(BKOOLParser.SM, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attributeDecl




    def attributeDecl(self):

        localctx = BKOOLParser.AttributeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attributeDecl)
        self._la = 0 # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 125
                    self.match(BKOOLParser.STATIC)


                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 128
                    self.match(BKOOLParser.FINAL)


                self.state = 131
                self.mtype(0)
                self.state = 132
                self.varDecl_list()
                self.state = 133
                self.match(BKOOLParser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 135
                    self.match(BKOOLParser.FINAL)


                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 138
                    self.match(BKOOLParser.STATIC)


                self.state = 141
                self.mtype(0)
                self.state = 142
                self.varDecl_list()
                self.state = 143
                self.match(BKOOLParser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecl_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_varDecl_init




    def varDecl_init(self):

        localctx = BKOOLParser.VarDecl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDecl_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(BKOOLParser.ID)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EQUAL:
                self.state = 148
                self.match(BKOOLParser.EQUAL)
                self.state = 149
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl_init(self):
            return self.getTypedRuleContext(BKOOLParser.VarDecl_initContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def varDecl_list(self):
            return self.getTypedRuleContext(BKOOLParser.VarDecl_listContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_varDecl_list




    def varDecl_list(self):

        localctx = BKOOLParser.VarDecl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl_list)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.varDecl_init()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.varDecl_init()
                self.state = 154
                self.match(BKOOLParser.COMMA)
                self.state = 155
                self.varDecl_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Block_stmtContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def mtype(self):
            return self.getTypedRuleContext(BKOOLParser.MtypeContext,0)


        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_methodDecl




    def methodDecl(self):

        localctx = BKOOLParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 159
                self.match(BKOOLParser.STATIC)


            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 162
                self.mtype(0)


            self.state = 165
            self.match(BKOOLParser.ID)
            self.state = 166
            self.match(BKOOLParser.LB)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.VOID_TYPE) | (1 << BKOOLParser.BOOLTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.ID))) != 0):
                self.state = 167
                self.param()


            self.state = 170
            self.match(BKOOLParser.RB)
            self.state = 171
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodParameter(self):
            return self.getTypedRuleContext(BKOOLParser.MethodParameterContext,0)


        def SM(self):
            return self.getToken(BKOOLParser.SM, 0)

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.methodParameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.methodParameter()
                self.state = 175
                self.match(BKOOLParser.SM)
                self.state = 176
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mtype(self):
            return self.getTypedRuleContext(BKOOLParser.MtypeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(BKOOLParser.ParameterListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_methodParameter




    def methodParameter(self):

        localctx = BKOOLParser.MethodParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.mtype(0)
            self.state = 181
            self.parameterList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def parameterList(self):
            return self.getTypedRuleContext(BKOOLParser.ParameterListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_parameterList




    def parameterList(self):

        localctx = BKOOLParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterList)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.match(BKOOLParser.ID)
                self.state = 185
                self.match(BKOOLParser.COMMA)
                self.state = 186
                self.parameterList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mtype(self):
            return self.getTypedRuleContext(BKOOLParser.MtypeContext,0)


        def varDecl_list(self):
            return self.getTypedRuleContext(BKOOLParser.VarDecl_listContext,0)


        def SM(self):
            return self.getToken(BKOOLParser.SM, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_varDecl




    def varDecl(self):

        localctx = BKOOLParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.FINAL:
                self.state = 189
                self.match(BKOOLParser.FINAL)


            self.state = 192
            self.mtype(0)
            self.state = 193
            self.varDecl_list()
            self.state = 194
            self.match(BKOOLParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Exp1Context)
            else:
                return self.getTypedRuleContext(BKOOLParser.Exp1Context,i)


        def LT(self):
            return self.getToken(BKOOLParser.LT, 0)

        def LE(self):
            return self.getToken(BKOOLParser.LE, 0)

        def GT(self):
            return self.getToken(BKOOLParser.GT, 0)

        def GE(self):
            return self.getToken(BKOOLParser.GE, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_exp




    def exp(self):

        localctx = BKOOLParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.state = 201
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.exp1()
                self.state = 197
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.LT) | (1 << BKOOLParser.LE) | (1 << BKOOLParser.GT) | (1 << BKOOLParser.GE))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 198
                self.exp1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.exp1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Exp2Context)
            else:
                return self.getTypedRuleContext(BKOOLParser.Exp2Context,i)

